src/test/ui/issues/issue-50714.stderr
error[E0646]: `main` function is not allowed to have a `where` clause
  --> $DIR/issue-50714.rs:4:1
   |
LL | / where
LL | |
LL | |     fn(&()): Eq,
   | |________________^ `main` cannot have a `where` clause

error: aborting due to previous error

For more information about this error, try `rustc --explain E0646`.
